# .xmonad

./: .gitignore  .gitmodules  LICENSE  Setup.hs  build  cabal.project  readme.org  stack.yaml  xmobarrcBot.hs  xmonad-ng.cabal
misc/: xmobarrcTop.hs
scripts/: mpc-play-pause.sh  nsp-console.sh  screenlock.sh  toggle-compton.sh  toggle-redshift.sh  toggle-touchpad.sh  toggle-trackpoint.sh  xshot-select-upload.sh  xshot-select.sh  xshot-upload.sh  xshot.sh
scripts/xmobar/: fcitx.sh
src/: Main.hs  Test.hs
src/XMonad/Actions/: Alsa.hs  FloatSnapSpaced.hs  PerConditionKeys.hs
src/XMonad/Custom/: Bindings.hs  Event.hs  Layout.hs  Log.hs  Manage.hs  Misc.hs  Navigation.hs  Projects.hs  Prompt.hs  Scratchpads.hs  Startup.hs  Theme.hs  Workspaces.hs
src/XMonad/Util/: ALSA.hs
test/: test-xephyr.sh  xmonad-ng-xephyr.sh
xmobarrc/: bot.hs  top.hs
