name:          xmonad-ng
version:       0.15.2
synopsis:      XMonad configuration
description:   XMonad configuration hacked together via stolen code and bad Haskell
               knowledge
license:       BSD3
license-file:  LICENSE
copyright:     Copyright (c) 2018 azahi
author:        azahi@teknik.io
maintainer:    azahi@teknik.io
stability:     experimental
category:      System
homepage:      https://github.com/azahi/xmonad-ng
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: https://github.com/azahi/xmonad-ng

executable xmonad-ng
  main-is:          Main.hs
  other-modules:    XMonad.Actions.FloatSnapSpaced
                    XMonad.Actions.PerConditionKeys
                    XMonad.Custom.Bindings
                    XMonad.Custom.Event
                    XMonad.Custom.Layout
                    XMonad.Custom.Log
                    XMonad.Custom.Manage
                    XMonad.Custom.Misc
                    XMonad.Custom.Navigation
                    XMonad.Custom.Projects
                    XMonad.Custom.Scratchpads
                    XMonad.Custom.Startup
                    XMonad.Custom.Theme
                    XMonad.Custom.Workspaces
                    XMonad.Util.ALSA
  hs-source-dirs:   src
  build-depends:    base           >= 4.11 && < 4.12
                  , X11            >= 1.9 && < 1.10
                  , alsa-mixer     >= 0.2 && < 0.3
                  , containers     >= 0.5 && < 0.6
                  , directory      >= 1.3 && < 1.4
                  , filepath       >= 1.4 && < 1.5
                  , mtl            >= 2.2 && < 2.3
                  , text           >= 1.2 && < 1.3
                  , time           >= 1.8 && < 1.9
                  , xmonad         >= 0.15 && < 0.16
                  , xmonad-contrib >= 0.15 && < 0.16
  default-language: Haskell2010
  other-extensions: MultiParamTypeClasses
                    CPP
                    TypeSynonymInstances
                    DeriveDataTypeable
                    LambdaCase
  ghc-options:      -Wall
