name:          xmonad-ng
version:       0.15.6
synopsis:      XMonad configuration
description:
  This package is a window manager built on top of xmonad and xmonad-contrib
  libraries targeted for a single-display GNU\/Linux machine running Xorg.
  .
  Made with efficiency in mind this window manager enables controlling windows
  using only keyboard and allows using multiple workspaces, scratchpads,
  window layouts and etc.

license:       BSD3
license-file:  LICENSE
copyright:     (c) 2018-2020 Azat Bahawi
author:        Azat Bahawi <azahi@teknik.io>
maintainer:    Azat Bahawi <azahi@teknik.io>
stability:     experimental
tested-with:   GHC ==8.8.4
category:      System
homepage:      https://github.com/azahi/.xmonad
bug-reports:   https://github.com/azahi/.xmonad/issues
build-type:    Simple
cabal-version: >=2.0

source-repository head
  type:     git
  location: https://github.com/azahi/.xmonad

executable xmonad-ng
  main-is:          Main.hs
  other-modules:
    XMonad.Actions.FloatSnapSpaced
    XMonad.Actions.PerConditionKeys
    XMonad.Custom.Bindings
    XMonad.Custom.Event
    XMonad.Custom.Layout
    XMonad.Custom.Log
    XMonad.Custom.Manage
    XMonad.Custom.Misc
    XMonad.Custom.Navigation
    XMonad.Custom.Projects
    XMonad.Custom.Scratchpads
    XMonad.Custom.Startup
    XMonad.Custom.Theme
    XMonad.Custom.Workspaces

  hs-source-dirs:   src
  build-depends:
      base            ^>=4.13
    , containers      ^>=0.6
    , directory       ^>=1.3
    , filepath        ^>=1.4
    , mtl             ^>=2.2
    , text            ^>=1.2
    , time            ^>=1.9
    , X11             ^>=1.9
    , xmonad          ^>=0.15
    , xmonad-contrib  ^>=0.16

  default-language: Haskell2010
  other-extensions:
    CPP
    DeriveDataTypeable
    LambdaCase
    MultiParamTypeClasses
    TypeSynonymInstances

  ghc-options:      -Wall
